[package]
name = "competitive-rs"
version = "0.1.0"
authors = ["yuya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "*"
itertools = "0.9.0"
itertools-num = "0.1.3"
maplit = "1.0.2"
proconio = "0.4.1"
smallvec = "1.4.2"
